k8s/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodeport-viewer
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeport-viewer
  namespace: nodeport-viewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeport-viewer
  template:
    metadata:
      labels:
        app: nodeport-viewer
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      serviceAccountName: nodeport-viewer
      containers:
        - name: nodeport-viewer
          image: gitlab.nam.cz:5050/nam/common/devops/nodeport-viewer:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: nodeport-viewer
  namespace: nodeport-viewer
spec:
  type: ClusterIP
  selector:
    app: nodeport-viewer
  ports:
    - name: http
      port: 80
      targetPort: 8080
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeport-viewer
  namespace: nodeport-viewer
spec:
  ingressClassName: nginx
  rules:
    - host: nodeports.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodeport-viewer
                port:
                  number: 80
